test/asm/undefined-opt.err
error: undefined-opt.asm(1):
    Unknown option 'x'
error: Assembly aborted (1 error)!
