test/asm/undefined-opt.asm
opt x ; there is no opt x
